--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
-	"name": "Flipped",
-	"version": "0.0.1",
-	"description": "Lets turn things on their head.",
-	"scripts": {
-		"start": "node app.js"
-	},
-	"dependencies": {
-		"express": "4.12.x",
-		"cfenv": "1.0.x"
-	},
-	"repository": {},
-	"engines": {
-		"node": "0.12.x"
-	} 
+  "name": "flapper-news",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "supervisor ./bin/www",
+    "test": "./node_modules/.bin/mocha"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "express-jwt": "^3.1.0",
+    "jade": "^1.11.0",
+    "jsonwebtoken": "^5.4.0",
+    "lodash": "^3.10.1",
+    "mongoose": "^4.1.11",
+    "morgan": "~1.6.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.0",
+    "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "chai": "*",
+    "supertest": "*",
+    "supervisor": "*"
+  }
 }
