--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "supervisor": "*"
   },
   "devDependencies": {
     "mocha": "*",
