--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "/node_modules/.bin/supervisor ./bin/www",
+    "start": "node ./bin/www",
     "test": "./node_modules/.bin/mocha"
   },
   "dependencies": {
