--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Flipped.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -23,7 +23,8 @@
     "serve-favicon": "~2.3.0",
     "uuid": "^2.0.1",
     "supervisor": "*",
-    "pg": "*"
+    "pg": "*",
+    "twilio", "*"
   },
   "devDependencies": {
     "mocha": "*",
