--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "./node_modules/.bin/mocha"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -20,10 +21,10 @@
     "morgan": "~1.6.1",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
+    "pg": "*",
     "serve-favicon": "~2.3.0",
-    "uuid": "^2.0.1",
     "supervisor": "*",
-    "pg": "*"
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "mocha": "*",
